<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/log_in_bg" >

    <LinearLayout
        android:id="@+id/login_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:gravity="center_horizontal"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal" >
            <ImageView
                android:id="@+id/username_icon"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:src="@mipmap/icon_username" />

            <EditText
                android:id="@+id/username_edit"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_marginLeft="8dp"
                android:scrollHorizontally="true"
                android:hint="@string/user_name_hint" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal" >
            <ImageView
                android:id="@+id/password_icon"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:src="@mipmap/icon_password" />

            <EditText
                android:id="@+id/password_edit"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_marginLeft="8dp"
                android:password="true"
                android:hint="@string/password_hint" />
        </LinearLayout>
        <TextView
            android:id="@+id/btn_login"
            android:layout_height="wrap_content"
            android:layout_width="300dp"
            android:layout_marginTop="16dp"
            android:text="@string/login"
            android:gravity="center"
            android:textSize="18sp"
            android:textColor="@android:color/white"
            android:background="@mipmap/long_button_bg" />
        <TextView
            android:id="@+id/signup_tip"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/signup_hint"
            android:gravity="center"
            android:textSize="16sp"
            android:textColor="#FF45DDBD" />
    </LinearLayout>
    <TextView
        android:id="@+id/forget_password_tip"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="60dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:text="@string/forget_password_hint"
        android:textSize="16sp"
        android:textColor="#FF45DDBD" />
</RelativeLayout>
