<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/sign_up_bg"
    tools:showIn="@layout/fragment_user_info">
    <ImageView
        android:id="@+id/signup_back"
        android:layout_height="20dp"
        android:layout_width="20dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="40dp"
        android:layout_marginRight="16dp"
        android:scaleType="fitXY"
        android:src="@mipmap/signup_icon_close" />
    <LinearLayout
        android:id="@+id/signup_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:gravity="center_horizontal"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:text="@string/welcome"
            android:textSize="24sp"
            android:textStyle="bold" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center_vertical"
            android:orientation="horizontal" >
            <ImageView
                android:id="@+id/username_icon"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:src="@mipmap/icon_username" />

            <EditText
                android:id="@+id/username_edit"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_marginLeft="8dp"
                android:hint="@string/user_name_hint" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal" >
            <ImageView
                android:id="@+id/password_icon"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:src="@mipmap/icon_password" />

            <EditText
                android:id="@+id/password_edit"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_marginLeft="8dp"
                android:password="true"
                android:hint="@string/password_hint" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal" >
            <ImageView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:src="@mipmap/icon_password" />

            <EditText
                android:id="@+id/password_again_edit"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_marginLeft="8dp"
                android:password="true"
                android:hint="@string/password_again_hint" />
        </LinearLayout>
        <TextView
            android:id="@+id/btn_singup"
            android:layout_height="wrap_content"
            android:layout_width="300dp"
            android:layout_marginTop="16dp"
            android:text="@string/get_started"
            android:gravity="center"
            android:textSize="18sp"
            android:textColor="@android:color/white"
            android:background="@mipmap/long_button_bg" />
        <ImageView
            android:id="@+id/weibo_singup"
            android:layout_height="wrap_content"
            android:layout_width="280dp"
            android:layout_marginTop="16dp"
            android:src="@mipmap/weibo_btn" />
        <ImageView
            android:id="@+id/wechat_singup"
            android:layout_height="100px"
            android:layout_width="280dp"
            android:layout_marginTop="16dp"
            android:src="@mipmap/wechat_btn" />
    </LinearLayout>

</RelativeLayout>
