<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.original.abroadeasy.widget.CustomSearchBar
        android:id="@+id/search_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </com.original.abroadeasy.widget.CustomSearchBar>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/grey_800"
            android:gravity="center">
            <TextView
                android:id="@+id/btn_sort"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sort"
                android:textSize="16sp"
                android:gravity="center"
                android:textColor="@color/tab_title_text_color"
                android:drawableRight="@mipmap/drop_icon_close"
                android:drawablePadding="8dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/grey_1000"
            android:gravity="center">
            <TextView
                android:id="@+id/btn_filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/filter"
                android:textSize="16sp"
                android:gravity="center"
                android:textColor="@color/tab_title_text_color"
                android:drawableRight="@mipmap/drop_icon_open"
                android:drawablePadding="8dp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/grey_1000"
        android:orientation="vertical">

        <include
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            layout="@layout/filter_layout" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="110dp"
            android:orientation="horizontal"
            android:paddingLeft="20dp"
            android:paddingRight="20dp">

            <TextView
                android:id="@+id/btn_reset_filter"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@mipmap/grey_button_bg"
                android:gravity="center"
                android:text="@string/filter_reset"
                android:textColor="#545555"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/btn_show_result"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="20dp"
                android:layout_weight="1"
                android:background="@mipmap/yellow_button_bg"
                android:gravity="center"
                android:text="@string/show_result"
                android:textColor="@android:color/white"
                android:textSize="16sp" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>
