<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!--    <include layout="@layout/view_toolbar"/>-->

    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/swipe_refresh_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <FrameLayout
            android:id="@+id/fragment_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </android.support.v4.widget.SwipeRefreshLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="170dp"
        android:layout_marginRight="10dp"
        android:clickable="true"
        android:src="@mipmap/add"
        app:backgroundTint="#ef9b1d"
        app:borderWidth="0dp"
        app:elevation="6dp"
        app:fabSize="mini"
        app:layout_behavior="com.original.abroadeasy.widget.ScrollFABBehavior"
        app:layout_anchor="@id/swipe_refresh_layout"
        app:layout_anchorGravity="top|right"
        app:pressedTranslationZ="12dp"
        app:rippleColor="@color/orange_100" />

    <RadioGroup
        android:id="@+id/tab_bar"
        android:layout_width="match_parent"
        android:layout_height="43dp"
        android:background="@android:color/black"
        android:layout_gravity="bottom"
        android:gravity="center"
        app:layout_behavior="com.original.abroadeasy.widget.TabBarBehavior"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/tab_home"
            style="@style/navigation_bottom_radio"
            android:drawableTop="@drawable/button_home_selector"
            android:text="@string/home" />
        <RadioButton
            android:id="@+id/tab_find"
            android:drawableTop="@drawable/button_explore_selector"
            style="@style/navigation_bottom_radio"
            android:text="@string/explore" />

        <RadioButton
            android:id="@+id/tab_blog"
            android:drawableTop="@drawable/button_news_selector"
            style="@style/navigation_bottom_radio"
            android:text="@string/blog" />

        <!--<RadioButton
            android:id="@+id/tab_user_info"
            style="@style/navigation_bottom_radio"
            android:drawableTop="@drawable/button_my_selector"
            android:text="@string/profile" />-->
    </RadioGroup>
</android.support.design.widget.CoordinatorLayout>